--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost/cryptowatcher
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.generate-ddl=true
+spring.datasource.password=admin
+spring.jpa.generate-ddl=false
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
